--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -50,7 +50,7 @@ version_path_separator = os
 output_encoding = utf-8
 
 # La URL de la base de datos se obtiene desde env.py
-sqlalchemy.url = 
+# sqlalchemy.url = 
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
