--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,9 @@
-DATABASE_URL=mysql+pymysql://root:root@localhost:3306/sustainability_db
+MYSQL_SERVER=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DB=sustainability_db
+MYSQL_PORT=3306
+FRONTEND_URL=http://localhost:3000
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30 
