--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: mysql:8.0
@@ -12,12 +10,13 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - app-network
 
   backend:
     build:
@@ -36,6 +35,7 @@ services:
         done &&
         echo 'MySQL is ready!' &&
         alembic upgrade head &&
+        mysql -h db -u root -p${MYSQL_ROOT_PASSWORD} sustainability_db < /app/init.sql &&
         uvicorn main:app --host 0.0.0.0 --port 8000
       "
     ports:
@@ -46,6 +46,10 @@ services:
       - ./backend:/app
       - ./backend/logs:/app/logs
       - ./backend/backups:/app/backups
+      - ./init.sql:/app/init.sql:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - app-network
 
   frontend:
     build:
@@ -61,6 +65,12 @@ services:
     depends_on:
       - backend
       - db
+    networks:
+      - app-network
 
 volumes:
   db_data:
+
+networks:
+  app-network:
+    driver: bridge
