--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
         mysql -h db -u root -p${MYSQL_ROOT_PASSWORD} sustainability_db < /app/init.sql &&
         uvicorn main:app --host 0.0.0.0 --port 8000
       "
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     depends_on:
       - db
     volumes:
@@ -60,16 +60,35 @@ services:
     restart: always
     env_file:
       - ./frontend/.env.production
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     depends_on:
       - backend
       - db
     networks:
       - app-network
 
+  caddy:
+    image: caddy:2
+    container_name: caddy
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app-network
+
 volumes:
   db_data:
+  caddy_data:
+  caddy_config:
 
 networks:
   app-network:
