--- a/backend/.env.production
+++ b/backend/.env.production
@@ -8,3 +8,4 @@ MAIL_SERVER=smtp.gmail.com
 MAIL_FROM=patrimonio2030app@gmail.com
 MAIL_FROM_NAME=Patrimonio2030 App
 CONTACT_EMAIL=patrimonio2030app@gmail.com
+FRONTEND_URL=patrimonio2030app.site
