--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -2,6 +2,9 @@ server {
   listen 80;
   server_name _;
 
+  # Permitir archivos de hasta 10MB
+  client_max_body_size 10M;
+
   root /usr/share/nginx/html;
   index index.html;
 
